# robosense_collect

./: CMakeLists.txt  README.md  README_CN.md  package.xml
DEFAULT_CONFIG/META/: latest_calibration_file.yaml
DEFAULT_CONFIG/conf/: collect.yaml
include/modules/rs_collect/: ros_adapter.h  rsappcarmanager.h  rsbase64.h  rscollectinfomanager.h  rscollectmanager.h  rsglobalconfig.h  rsmessagemonitor.h  rsrecordclipchannel.h  rsrecordclipmanager.h  rsrecordiomanager.h  rsversion.h
include/modules/rs_filesystem/: rsfilesystem.h
launch/: robosense_collect.launch  robosense_collect.py  ros2_collect.launch  ros2_collect.launch.py
src/modules/: rscollectnode.cc
src/modules/rs_collect/: rsappcarmanager.cc  rsbase64.cc  rscollectinfomanager.cc  rscollectmanager.cc  rsglobalconfig.cc  rsmessagemonitor.cc  rsrecordclipchannel.cc  rsrecordclipmanager.cc  rsrecordiomanager.cc  rsversion.cc
src/modules/rs_filesystem/: rsfilesystem.cc
